Refactored to reduce complexity.